--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ return false;
 .icon {font-size: 30px;
        color: white;}
 .icon:hover {color: red;}
+#icon1:hover {color: red;}
 #picture.sticky{
 position: -webkit-sticky;
 position: fixed;
@@ -144,6 +145,9 @@ text5 {color: white;}
   background-repeat: no-repeat;
   background-size: cover;
     }
+  table.sticky1{
+  top: 500px;
+  }
 </style>
 
 </head>
@@ -160,6 +164,21 @@ text5 {color: white;}
 manga
 </span></center>
 <h1 id="border" style="color: white;">Giripura Aththo Cartoons in Sinhala.</h1>
+<center>
+<table class="sticky1" id="picture" width="50%" height="25%" style="background-color: transparent; align-items: center;">
+<tbody>
+<tr>
+<td><a><i onclick="myFunction()" style="font-size: 30px;color: white;" id="icon1" title="CLOSE." class="material-icons">close</i></a></td>
+</tr>
+<tr>
+<td><h2><b>THIS is a Advertisment only.</b></h2></td>
+</tr>
+<tr>
+<td><img width="250px" height="141.25px" src="advertisment1.png"/></td>
+</tr>
+</tbody>
+</table>
+</center>
 <h2 style="color: white;">සොරා ද දිනුම් ජූඩෝ ද දිනුම්.-PART 1</h2>
 <video width="480px" height="294px" controls><source src="2.mp4" type="video/mp4"></video>
 <h2 style="color: white;">සොරා ද දිනුම් ජූඩෝ ද දිනුම්.-PART 2</h2>
@@ -224,4 +243,5 @@ manga
   changeColor();
 </script>
 </body>
+
 </html>
