--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ manga
 <table class="sticky1" id="picture" width="50%" height="25%" style="background-color: transparent; align-items: center;">
 <tbody>
 <tr>
-<td><a><i onclick="myFunction()" style="font-size: 30px;color: white;" id="icon1" title="CLOSE." class="material-icons">close</i></a></td>
+<td><center><a><i onclick="myFunction()" style="font-size: 30px;color: white;" id="icon1" title="CLOSE." class="material-icons">close</i></a></center></td>
 </tr>
 <tr>
-<td><h2><b>THIS is a Advertisment only.</b></h2></td>
+<td><center><h2><b>THIS is a Advertisment only.</b></h2></center></td>
 </tr>
 <tr>
-<td><img width="500px" height="282.5px" src="advertisment1.png"/></td>
+<td><center><img width="500px" height="282.5px" src="advertisment1.png"/></center></td>
 </tr>
 </tbody>
 </table>
@@ -319,5 +319,6 @@ function topFunction() {
 </body>
 
 </html>
+
 
 
