--- a/index.html
+++ b/index.html
@@ -145,9 +145,7 @@ text5 {color: white;}
   background-repeat: no-repeat;
   background-size: cover;
     }
-  table.sticky1{
-  top: 500px;
-  }
+  
 </style>
 
 </head>
@@ -168,10 +166,10 @@ manga
 <table class="sticky1" id="picture" width="50%" height="25%" style="background-color: transparent; align-items: center;">
 <tbody>
 <tr>
-<td><center><a><i onclick="myFunction()" style="font-size: 30px;color: white;" id="icon1" title="CLOSE." class="material-icons">close</i></a></center></td>
+<td><center><a><i onclick="myFunction()" style="font-size: 30px;" id="icon" title="CLOSE." class="material-icons">close</i></a></center></td>
 </tr>
 <tr>
-<td><center><h2><b>THIS is a Advertisment only.</b></h2></center></td>
+<td><center><h2 style="color: white;"><b>THIS is a Advertisment only.</b></h2></center></td>
 </tr>
 <tr>
 <td><center><img width="500px" height="282.5px" src="advertisment1.png"/></center></td>
@@ -319,6 +317,7 @@ function topFunction() {
 </body>
 
 </html>
+
 
 
 
