--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ text5 {color: white;}
   -webkit-filter: blur(0px);
   
   
-  height: 1500px;
+  height: 1800px;
   width: 100%;
   
   /* Center and scale the image nicely */
@@ -166,7 +166,7 @@ manga
 <table class="sticky1" id="picture" width="50%" height="25%" style="background-color: transparent; align-items: center;">
 <tbody>
 <tr>
-<td><center><a><i onclick="myFunction()" style="font-size: 30px;" id="icon" title="CLOSE." class="material-icons">close</i></a></center></td>
+<td><center><text3><a><i onclick="myFunction()" style="font-size: 30px;" id="icon" title="CLOSE." class="material-icons">close</i></a></text3></center></td>
 </tr>
 <tr>
 <td><center><h2 style="color: white;"><b>THIS is a Advertisment only.</b></h2></center></td>
@@ -317,6 +317,7 @@ function topFunction() {
 </body>
 
 </html>
+
 
 
 
