--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ manga
 <td><center><text3><a><i onclick="myFunction()" style="font-size: 30px;" id="icon" title="CLOSE." class="material-icons">close</i></a></text3></center></td>
 </tr>
 <tr>
-<td><center><h2 style="color: white;"><b>THIS is a Advertisment only.</b></h2></center></td>
+<td><center><h2 style="color: white;"><b>This is a Advertisment only.</b></h2></center></td>
 </tr>
 <tr>
 <td><center><img width="500px" height="282.5px" src="advertisment1.png"/></center></td>
@@ -317,6 +317,7 @@ function topFunction() {
 </body>
 
 </html>
+
 
 
 
